--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -82,19 +82,23 @@ img {
 }
 .testimonial-outr {
     .service-outr {
-        margin-left: 15%;
-        margin-right: 15%;
+        padding-left: 15%;
+        padding-right: 15%;
     }
-    .react-multiple-carousel__arrow--right {
+    .slick-next {
         right: 0;
     }
-    .react-multiple-carousel__arrow--left {
+    .slick-prev {
         left: 0;
     }
-    .react-multiple-carousel__arrow {
+    .slick-prev,
+    .slick-next {
         border-radius: 0;
         background: #d62d2d;
-        &:hover {
+        width: 40px;
+        height: 40px;
+        &:hover,
+        &:focus {
             background: #d62d2d;
         }
     }
@@ -125,6 +129,20 @@ img {
         top: 0;
         right: 0;
         height: 100%;
+    }
+}
+.work-outr {
+    .card {
+        height: 100%;
+    }
+    .card-img-top {
+        height: 400px;
+        overflow: hidden;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
     }
 }
 @media only screen and (max-width: 767px) {
