--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -69,12 +69,31 @@ img {
     }
 }
 .client-pic {
-    max-width: 150px;
+    max-width: 180px;
 }
 .react-multi-carousel-track {
     align-items: center;
     padding: 0 20px;
 }
+.ip-protection {
+    .react-multiple-carousel__arrow--left {
+        left: 0;
+    }
+    .react-multiple-carousel__arrow--right {
+        right: 0;
+    }
+    .react-multiple-carousel__arrow {
+        border-radius: 0;
+        background: #d62d2d;
+        width: 40px;
+        height: 40px;
+        &:hover,
+        &:focus {
+            background: #d62d2d;
+        }
+    }
+}
+
 .service {
     .react-multi-carousel-track {
         margin-bottom: 50px;
