--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -116,6 +116,7 @@ img {
         background: #d62d2d;
         width: 40px;
         height: 40px;
+        z-index: 999;
         &:hover,
         &:focus {
             background: #d62d2d;
@@ -162,6 +163,11 @@ img {
             height: 100%;
             object-fit: contain;
         }
+    }
+}
+@media (min-width: 1200px) {
+    .display-6 {
+        font-size: 2.2rem;
     }
 }
 @media only screen and (max-width: 767px) {
