--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -173,7 +173,6 @@ img {
     input,
     textarea {
         width: 100%;
-        border: 0;
         padding: 10px 20px;
         box-sizing: border-box;
         margin-bottom: 15px;
@@ -182,31 +181,30 @@ img {
     textarea {
         height: 100px;
         resize: vertical;
+        border: 1px solid rgb(206, 212, 218);
+        border-radius: 0.25rem;
     }
 
-    button {
-        width: 100%;
-        padding: 10px;
-        border: 0;
-        cursor: pointer;
-        background: #fca253;
-        font-weight: bold;
-        color: #fff;
-        font-size: 18px;
-        margin-bottom: 15px;
-        text-transform: uppercase;
-    }
+    form {
+        span {
+            display: none;
+            text-align: center;
 
-    span {
-        display: none;
-        text-align: center;
-
-        &.visible {
-            display: block;
+            &.visible {
+                display: block;
+            }
         }
     }
 }
-
+main {
+    min-height: 80vh;
+}
+.contact {
+    a {
+        color: #000;
+        text-decoration: none;
+    }
+}
 @media (min-width: 1200px) {
     .display-6 {
         font-size: 2.2rem;
