--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -222,6 +222,10 @@ main {
         color: #000;
     }
 }
+.mainSpacing {
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
 @media (min-width: 1200px) {
     .display-6 {
         font-size: 2.2rem;
@@ -284,6 +288,10 @@ main {
     }
     body {
         padding-top: 56px;
+    }
+    .mainSpacing {
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
 }
 @media only screen and (max-width: 560px) {
