--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -245,6 +245,17 @@ main {
         }
     }
 }
+.about-outr {
+    .wp-block-group {
+        margin-bottom: 3rem;
+        @media (min-width: 768px) {
+            img {
+                float: left;
+                margin: 15px 25px 15px 0;
+            }
+        }
+    }
+}
 @media (min-width: 1200px) {
     .display-6 {
         font-size: 2.2rem;
