--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -251,7 +251,9 @@ main {
         @media (min-width: 768px) {
             img {
                 float: left;
-                margin: 15px 25px 15px 0;
+                margin: 5px 25px 15px 0;
+                width: 200px;
+                height: auto;
             }
         }
     }
