--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -222,7 +222,10 @@ main {
     }
     a {
         text-decoration: none;
-        color: #000;
+        color: #0274be;
+    }
+    a:hover {
+        color: #3a3a3a;
     }
 }
 .mainSpacing {
