--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,6 +13,9 @@ body {
 h1 {
     font-size: 50px;
 }
+h1, .entry-content h1, .entry-content h1 {
+    text-transform: capitalize;
+}
 h2 {
     font-size: 40px;
 }
