design changes of about

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,7 +13,9 @@ body {
 h1 {
     font-size: 50px;
 }
-h1, .entry-content h1, .entry-content h1 {
+h1,
+.entry-content h1,
+.entry-content h1 {
     text-transform: capitalize;
 }
 h2 {
@@ -173,12 +175,12 @@ section:nth-child(even) {
 }
 
 .abpost-index {
-    background-color: #ECECEC;
+    background-color: #ececec;
     padding-top: 0.8rem;
     padding-bottom: 0.8rem;
     margin: 1.5rem 15%;
     h2 {
-        font-size: 1rem!important;
+        font-size: 1rem !important;
         text-decoration: none;
     }
 }
@@ -269,12 +271,24 @@ main {
 .about-outr {
     .wp-block-group {
         margin-bottom: 3rem;
+        clear: both;
+        overflow: hidden;
+        h2 {
+            margin-bottom: 25px;
+            margin-top: 20px;
+            font-weight: 300;
+        }
         @media (min-width: 768px) {
             img {
                 float: left;
                 margin: 5px 25px 15px 0;
                 width: 200px;
                 height: auto;
+            }
+            h2 {
+                margin-bottom: 25px;
+                margin-top: 30px;
+                font-weight: 300;
             }
         }
     }
