Init Cookie Settings

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -191,6 +191,20 @@ section:nth-child(even) {
 .disclaimer-text {
     font-size: .65em;
 }
+.cookie-consent{
+    bottom: 0;
+    position: fixed;
+    right: 0;
+    border-radius: 4px;
+    .bg-custom{
+        background-color:#130f40;
+        }
+    .fas{
+        cursor: pointer;
+        font-size: 24px;
+    }
+}
+
 .gatsby-image-wrapper {
     display: block !important;
     width: 50% !important;
